# NourishFlow

./: CLAUDE.md  DEV_PRD_Day1_NourishFlow_MVP.md  PRD_MVP_NourishFlow.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: ingest.py  main.py
backend/app/api/: chat.py  citations.py
backend/app/core/: config.py  db.py
backend/app/models/: tables.py
backend/app/schemas/: brand.py
backend/app/services/: chat.py  chunker.py  pdf_parser.py  search.py
backend/data/brands/: _template.json  chagee.json  kfc.json  luckin.json  mcdonalds.json  starbucks.json
docs/: DEV_PRD_Day2_NourishFlow_MVP.md  HARNESS_LEARNINGS.md  MVP_DAY1_REPORT.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatView.tsx  CitationDialog.tsx  MessageBubble.tsx
frontend/src/lib/: api.ts
scripts/: generate_brands.py  smoke_p1.sh
