[project]
name = "nourishflow"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlmodel>=0.0.22,<0.1",
    "psycopg[binary]>=3.2,<3.3",
    "pgvector>=0.3,<0.4",
    "meilisearch>=0.31,<0.32",
    "pdfplumber>=0.11,<0.12",
    "litellm>=1.52,<1.60",
    "pydantic-settings>=2.6,<3",
    "sse-starlette>=2.1,<3",
    "typer>=0.13,<0.14",
    "python-multipart>=0.0.12,<0.1",
]
